--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <html>
-<head>
-    
-</head>
-
+    <head>
+        <title>My first jQuery plugin</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    </head>
 
 <body>
-<dl class="accordion" id="my-accordion">
-  <dt>Section 1</dt>
-    <dd>Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam.</dd>
-  <dt>Section 2</dt>
-    <dd>Vestibulum a velit eu ante scelerisque vulputate.</dd>
-  <dt>Section 3</dt>
-    <dd>Nam mi. Proin viverra leo ut odio. Curabitur malesuada.</dd>
-  <dt>Section 4</dt>
-    <dd>Vivamus nisi metus, molestie vel, gravida in, condimentum sit amet, nunc.</dd>
-</dl>
+    <dl class="accordion" id="my-accordion">
+      <dt>Section 1</dt>
+        <dd>Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam.</dd>
+      <dt>Section 2</dt>
+        <dd>Vestibulum a velit eu ante scelerisque vulputate.</dd>
+      <dt>Section 3</dt>
+        <dd>Nam mi. Proin viverra leo ut odio. Curabitur malesuada.</dd>
+      <dt>Section 4</dt>
+        <dd>Vivamus nisi metus, molestie vel, gravida in, condimentum sit amet, nunc.</dd>
+    </dl>
 
 </body>
 </html>
