--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <body>
     <dl class="accordion" id="my-accordion">
       <dt>Section 1</dt>
-        <dd>Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam.</dd>
+        <dd>This is the first section content.</dd>
       <dt>Section 2</dt>
-        <dd>Vestibulum a velit eu ante scelerisque vulputate.</dd>
+        <dd>This is the second section content.</dd>
       <dt>Section 3</dt>
-        <dd>Nam mi. Proin viverra leo ut odio. Curabitur malesuada.</dd>
+        <dd>This is the third section content.</dd>
       <dt>Section 4</dt>
-        <dd>Vivamus nisi metus, molestie vel, gravida in, condimentum sit amet, nunc.</dd>
+        <dd>This is the fourth section content.</dd>
     </dl>
 
 </body>
