--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
     <head>
         <title>My first jQuery plugin</title>
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script type="text/javascript" scr="js/script.js"></script>
+        <script type="text/javascript">
+            $(document).ready(function(){
+                $('dl#my-accordion').accordion({open:true});
+        });
+        </script>
     </head>
 
 <body>
@@ -17,4 +24,5 @@
     </dl>
 
 </body>
+
 </html>
