--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>My first jQuery plugin</title>
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script type="text/javascript" scr="js/script.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
         <script type="text/javascript">
             $(document).ready(function(){
                 $('dl#my-accordion').accordion({open:true});
